--- a/app/src/main/res/layout/from_spinner.xml
+++ b/app/src/main/res/layout/from_spinner.xml
@@ -15,7 +15,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/search"
+        android:id="@+id/edit_text"
         android:hint="@string/search"
         android:textSize="20sp"
         android:singleLine="true"
@@ -27,6 +27,6 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/list_item"/>
+        android:id="@+id/list_view"/>
 
 </LinearLayout>
